src/objects/SecureTradingSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Secure Trading login credentials.</description>
    <fields>
        <fullName>Alias__c</fullName>
        <label>Alias</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endpoint__c</fullName>
        <label>Endpoint</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiteReference__c</fullName>
        <label>Site Reference</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TermURL__c</fullName>
        <label>Term URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>UseCardTypeMapping__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Card Type Mapping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Secure Trading Settings</label>
</CustomObject>